fixing weird spacing

--- a/solar-system/styles/solar-system.css
+++ b/solar-system/styles/solar-system.css
@@ -151,7 +151,7 @@ h3 {
     color: var(--text-color-light);
     padding: .3rem;
     font-size: 1.2rem;
-    margin-left: 15px;
+    margin-left: 35px;
 }
 
 
